site: onboarding reviewed

--- a/scalus-site/content/onboarding/for-cardano-developers.mdx
+++ b/scalus-site/content/onboarding/for-cardano-developers.mdx
@@ -1,11 +1,12 @@
 ---
 title: Scalus for Cardano Developers
+description: Complete onboarding guide for Cardano developers. Learn Scala 3 fundamentals, debug validators with IDE breakpoints, and build type-safe smart contracts with professional tooling.
 sidebarTitle: For Cardano Developers
 ---
 
 import { Steps, Callout } from 'nextra/components'
 
-# Scalus Onboarding for Cardano Developers
+# Scalus for Cardano Developers
 
 Welcome! You know Cardano's eUTxO model, Plutus, and blockchain fundamentals. Now learn how to build validators using Scala 3's powerful type system and professional tooling.
 
@@ -245,6 +246,7 @@ object MyValidator extends Validator
 
 ## Get Help
 
+Need assistance? Connect with the Scalus community:
 - **Join Discord:** [Ask questions](https://discord.gg/B6tXmBzhTn)
 - **Join Scalus Club:** [Check new features & discuss](https://luma.com/scalus)
 - **Examples:** [Real-world validator code](https://github.com/nau/scalus/tree/master/scalus-examples)
