--- a/scalus-site/content/onboarding/index.mdx
+++ b/scalus-site/content/onboarding/index.mdx
@@ -1,14 +1,15 @@
 ---
 asIndexPage: true
-title: Scalus Onboarding
+title: Scalus Onboarding Guides
+description: Choose your learning path to master Scalus. For Cardano developers learning Scala 3, or Scala developers building blockchain smart contracts on Cardano.
 sidebarTitle: Onboarding
 ---
 
-# Scalus Onboarding
+# Scalus Onboarding Guides
 
 Choose your learning path based on your background. Each guide provides a structured onboarding experience with checklists, time estimates, and curated resources.
 
-## Onboarding Guides
+## Choose Your Developer Path
 
 import { Cards } from 'nextra/components'
 
@@ -55,7 +56,7 @@ Each onboarding guide includes:
 **Time to first validator:** ~45 minutes (after Scala basics)
 **Time to proficiency:** ~4-6 hours (including Scala learning)
 
-## Not Sure?
+## Still Deciding? Start Here
 
 Start with **[For Scala Developers](/docs/onboarding/for-scala-developers)** if you have any Scala experience, even minimal. You'll pick up Cardano concepts faster than learning a new programming language.
 
