--- a/scalus-site/content/onboarding/for-scala-developers.mdx
+++ b/scalus-site/content/onboarding/for-scala-developers.mdx
@@ -1,15 +1,16 @@
 ---
 title: Scalus for Scala Developers
+description: Learn how Scala developers can build Cardano smart contracts using familiar tools and patterns. From first validator to production deployment in hours.
 sidebarTitle: For Scala Developers
 ---
 
 import { Steps, Callout } from 'nextra/components'
 
-# Scalus Onboarding for Scala Developers
+# Scalus for Scala Developers
 
-Welcome! You know Scala, the JVM ecosystem, and functional programming. Now learn how to build smart contracts for the Cardano blockchain using the language you already love.
+Build Cardano smart contracts using the Scala you already know. Get your first validator running in 30 minutes with familiar tools like IntelliJ IDEA, ScalaTest, and SBT.
 
-## Why This Path Works for You
+## Why Scalus Works for Scala Developers
 
 You already understand:
 - ✓ Scala 3 syntax and type system
@@ -29,7 +30,7 @@ You'll learn:
 
 ---
 
-## Your Journey in 4 Steps
+## Your Learning Path
 
 ### Step 1: Quick Start (30 minutes)
 
@@ -56,7 +57,7 @@ You'll learn:
 </Steps>
 ---
 
-### Step 2: Cardano Fundamentals (1-2 hours)
+### Step 2: Understand Cardano Blockchain (1-2 hours)
 
 **Goal:** Understand how Cardano's eUTxO model and validators work
 
@@ -92,7 +93,7 @@ Always check [Supported Features](/docs/language-guide/support)!
 </Steps>
 ---
 
-### Step 3: Development lifecycle (2-3 hours)
+### Step 3: Development Lifecycle (2-3 hours)
 
 **Goal:** Build tested, optimized validators ready for testnet/mainnet
 
@@ -129,7 +130,7 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 </Steps>
 ---
 
-### Step 4: Advanced Patterns (Ongoing)
+### Step 4: Master Advanced Patterns
 
 **Goal:** Master optimizations and advanced validator patterns
 <Steps>
@@ -309,6 +310,8 @@ object MyValidator extends Validator
 ---
 
 ## Get Help
+
+Need assistance? Connect with the Scalus community:
 - **Join Discord:** [Ask questions](https://discord.gg/B6tXmBzhTn)
 - **Join Scalus Club:** [Check new features & discuss](https://luma.com/scalus)
 - **Examples:** [Real-world validator code](https://github.com/nau/scalus/tree/master/scalus-examples)
