site: smart-contracts, optimisations for seo

--- a/scalus-site/content/smart-contract/compiling.mdx
+++ b/scalus-site/content/smart-contract/compiling.mdx
@@ -1,9 +1,10 @@
 ---
-title: Compiling Cardano Smart Contract
+title: Compiling Cardano Smart Contracts to Plutus
 sidebarTitle: Compiling
+description: Compile Scala validators to Plutus Core bytecode. Learn about Plutus versions (V1/V2/V3), encoding options, error traces, and generating transaction-ready scripts.
 ---
 
-# Compiling Smart Contract
+# Compiling Smart Contracts
 
 ## Basic Compilation
 
