--- a/scalus-site/content/smart-contract/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contract/developing-smart-contracts.mdx
@@ -1,11 +1,11 @@
 ---
-title: Developing Cardano Smart Contracts
+title: Developing Your First Cardano Smart Contract
 sidebarTitle: Developing Smart Contracts
-#display: hidden
+description: Write, test, and debug your first Cardano validator using Scalus. Learn spending validators, datums, redeemers, and how to debug contracts as regular Scala code.
 ---
 import { Steps, Tabs } from 'nextra/components'
 
-# Developing First Cardano Smart Contract
+# Developing Your First Cardano Smart Contract
 
 In this tutorial, you'll write, test, and debug your first Cardano smart contract using Scalus. You'll learn the fundamentals of spending validators, datums, and redeemers while experiencing Scalus's unique advantage: debugging smart contracts as regular Scala code with your favorite IDE.
 
@@ -220,7 +220,7 @@ val scriptHex = program.doubleCborHex
 // with your transaction builder of choice
 ```
 
-Learn more about [Compiling Smart Contracts](/docs/smart-contract/debugging).
+Learn more about [Compiling Smart Contracts](/docs/smart-contract/compiling).
 
 </Steps>
 
