--- a/scalus-site/content/smart-contract/index.mdx
+++ b/scalus-site/content/smart-contract/index.mdx
@@ -1,12 +1,15 @@
 ---
 asIndexPage: true
-title: Cardano Smart Contracts
-sidebarTitle: Cardano Smart Contracts
+title: Cardano Smart Contracts with Scalus
+sidebarTitle: Smart Contracts
+description: Build type-safe, debuggable Cardano smart contracts using Scala. Write validators, test them locally, and compile to Plutus Core with Scalus.
 ---
 
 # Cardano Smart Contracts
 
-Build type-safe, debuggable smart contracts for Cardano using Scala. This section guides you through writing, testing, and deploying validators with Scalus.
+Scalus enables you to build type-safe, debuggable smart contracts for Cardano using Scala. Write validators in familiar Scala syntax, test them with standard tooling, and compile directly to Plutus Core bytecode.
+
+This section covers everything from writing your first validator to advanced optimization techniques for production-ready contracts.
 
 ## Getting Started
 
