--- a/scalus-site/content/smart-contract/validators.mdx
+++ b/scalus-site/content/smart-contract/validators.mdx
@@ -300,6 +300,6 @@ The key advantage is you write the logic once and reuse it with different parame
 ## Next Steps
 
 - **HTLC Contract Tutorial** - Complete walkthrough of building a Hash Time Locked Contract
-- **Testing Validators** - How to test your validators thoroughly
-- **Transaction Building** - Building transactions that interact with validators
-- **Debugging** - Common errors and debugging techniques
+- **[Testing Validators](/docs/smart-contract/testing)** - How to test your validators thoroughly
+- **[Transaction Building](/docs/txbuilder)** - Building transactions that interact with validators
+- **[Debugging](/docs/smart-contract/debugging)** - Common errors and debugging techniques
