site: language-guide for seo

--- a/scalus-site/content/language-guide/builtin-functions.mdx
+++ b/scalus-site/content/language-guide/builtin-functions.mdx
@@ -1,13 +1,14 @@
 ---
-title: Builtin Functions
+title: Builtin Functions for Cardano Smart Contracts
 sidebarTitle: Builtin Functions
+description: Use Cardano Plutus builtin functions in Scalus smart contracts. Learn cryptographic operations, byte string manipulation, list operations, and blockchain-specific utilities.
 ---
 
 # Builtin Functions
 
-Cardano Plutus provides a comprehensive set of built-in functions optimized for blockchain execution. Scalus implements these functions in the [`Builtins`](https://scalus.org/api/scalus/builtin/Builtins$.html) object, making them available with familiar Scala syntax.
+Cardano Plutus provides built-in functions optimized for blockchain execution. Scalus exposes these functions through the [`Builtins`](https://scalus.org/api/scalus/builtin/Builtins$.html) object with familiar Scala syntax.
 
-All builtin functions are automatically recognized by the Scalus compiler and compiled to their corresponding Plutus operations.
+These builtin functions are automatically recognized by the Scalus compiler and compiled to their corresponding Plutus operations for efficient on-chain execution.
 
 ## Integer Operations
 
