--- a/scalus-site/content/language-guide/collections.mdx
+++ b/scalus-site/content/language-guide/collections.mdx
@@ -1,11 +1,12 @@
 ---
-title: Collections
+title: Collections for Cardano Smart Contracts
 sidebarTitle: Collections
+description: Work with collections in Cardano smart contracts using Scalus. Learn List operations, AssocMap (key-value pairs), and efficient data manipulation for on-chain validators.
 ---
 
 # Collections
 
-Scalus provides several collection types for organizing and manipulating data in smart contracts. These collections are optimized for blockchain execution and compile efficiently to Plutus Core.
+Scalus provides immutable collection types for organizing and manipulating data in smart contracts. These collections—List and AssocMap—are optimized for blockchain execution and compile efficiently to Plutus Core.
 
 ## List
 
