--- a/scalus-site/content/language-guide/constants-primitives.mdx
+++ b/scalus-site/content/language-guide/constants-primitives.mdx
@@ -1,11 +1,12 @@
 ---
-title: Primitive Types
+title: Primitive Types for Cardano Smart Contracts
 sidebarTitle: Primitive Types
+description: Work with Plutus V3 primitive types in Cardano smart contracts using Scalus. Learn Unit, Boolean, BigInt, ByteString, String, Data, and BLS12-381 cryptographic types.
 ---
 
 # Primitive Types
 
-Scalus provides full support for Plutus V3 primitive types, allowing you to write smart contracts using familiar Scala syntax while targeting the Cardano blockchain.
+Scalus provides full support for Plutus V3 primitive types, enabling you to write Cardano smart contracts using familiar Scala syntax. These types map directly to Plutus Core primitives for efficient blockchain execution.
 
 ## Type Correspondence
 
