--- a/scalus-site/content/language-guide/control-flow.mdx
+++ b/scalus-site/content/language-guide/control-flow.mdx
@@ -1,11 +1,12 @@
 ---
-title: Control Flow
+title: Control Flow in Cardano Smart Contracts
 sidebarTitle: Control Flow
+description: Control program execution in Cardano smart contracts using Scalus. Learn if-then-else conditionals, pattern matching on case classes and enums, and handling logic flow efficiently.
 ---
 
 # Control Flow
 
-Scalus provides several control flow constructs for directing program execution. While simpler than general-purpose languages, these constructs are sufficient for most smart contract logic and compile efficiently to Plutus Core.
+Scalus provides control flow constructs for directing program execution in smart contracts. These constructs—if-then-else and pattern matching—are sufficient for most validator logic and compile efficiently to Plutus Core.
 
 ## If-Then-Else
 
