--- a/scalus-site/content/language-guide/data-types.mdx
+++ b/scalus-site/content/language-guide/data-types.mdx
@@ -1,11 +1,12 @@
 ---
-title: Custom Data Types
+title: Custom Data Types for Cardano Smart Contracts
 sidebarTitle: Custom Data Types
+description: Define custom data types using Scala case classes and enums for Cardano smart contracts. Learn ToData/FromData, pattern matching, extension methods, and best practices.
 ---
 
 # Custom Data Types
 
-Scalus allows you to define custom data types using Scala's case classes and enums, which are compiled to equivalent Plutus structures. These types can be automatically serialized to and from Plutus `Data`, making them ideal for smart contract development.
+Define custom data types using Scala's case classes and enums, which compile to Plutus structures. These types automatically serialize to and from Plutus `Data`, enabling type-safe smart contract development on Cardano.
 
 ## Defining Data Types
 
