--- a/scalus-site/content/language-guide/functions.mdx
+++ b/scalus-site/content/language-guide/functions.mdx
@@ -1,11 +1,12 @@
 ---
-title: Functions
+title: Functions in Cardano Smart Contracts
 sidebarTitle: Functions
+description: Write functions for Cardano smart contracts in Scalus. Learn lambdas, higher-order functions, recursion, closures, composition, and functional programming patterns for validators.
 ---
 
 # Functions
 
-Functions are first-class values in Scalus, enabling functional programming patterns essential for smart contract development. Scalus supports both named functions (`def`) and anonymous functions (lambdas).
+Functions are first-class values in Scalus, enabling functional programming patterns essential for smart contract development. Scalus supports named functions (`def`), anonymous functions (lambdas), and higher-order functions.
 
 ## Defining Functions
 
