--- a/scalus-site/content/language-guide/index.mdx
+++ b/scalus-site/content/language-guide/index.mdx
@@ -1,12 +1,13 @@
 ---
 asIndexPage: true
-title: Scalus Language Guide
+title: Scalus Language Guide - Scala 3 for Cardano Smart Contracts
 sidebarTitle: Language Guide
+description: Write Cardano smart contracts using Scala 3. Learn supported language features, types, functions, collections, and patterns for building type-safe Plutus validators.
 ---
 
 # Scalus Language Guide
 
-Learn how to write smart contracts for Cardano using Scala 3. This guide covers the Scalus language features, syntax, and programming patterns for building efficient, type-safe validators.
+Learn how to write smart contracts for Cardano using Scala 3. This guide covers Scalus language features, syntax, and programming patterns for building efficient, type-safe validators that compile to Plutus Core.
 
 ## Introduction
 
