--- a/scalus-site/content/language-guide/modules.mdx
+++ b/scalus-site/content/language-guide/modules.mdx
@@ -1,11 +1,12 @@
 ---
-title: Modules
+title: Modules and Code Organization for Cardano Smart Contracts
 sidebarTitle: Modules
+description: Organize Cardano smart contracts with Scalus modules. Learn @Compile annotation, @Ignore, inline values, module linking, and how to distribute reusable code as libraries.
 ---
 
 # Modules
 
-Modules in Scalus enable code organization, reusability, and distribution. By using the `@Compile` annotation, you can create reusable libraries that compile to Plutus Core and can be shared across multiple smart contracts.
+Modules in Scalus enable code organization, reusability, and distribution. Use the `@Compile` annotation to create reusable libraries that compile to Plutus Core and can be shared across multiple smart contracts.
 
 ## What are Modules?
 
