--- a/scalus-site/content/language-guide/scala3.mdx
+++ b/scalus-site/content/language-guide/scala3.mdx
@@ -1,14 +1,14 @@
 ---
-title: Why Scala 3?
+title: Why Scala 3 for Cardano Smart Contracts?
 sidebarTitle: Why Scala 3?
+description: Discover why Scala 3 is ideal for Cardano blockchain development. Learn about multi-platform versatility, industry-proven reliability, and how it's used by major financial institutions.
 ---
 
-# Scala 3
+# Why Scala 3 for Cardano?
 
-## Why Scala 3?
-Scala 3 is a powerful, modern programming language that combines object-oriented and functional programming paradigms. It offers significant improvements over its predecessor with cleaner syntax, better type inference, and enhanced metaprogramming capabilities.
+Scala 3 is a powerful, modern programming language that combines object-oriented and functional programming paradigms. It offers cleaner syntax, better type inference, and enhanced metaprogramming capabilities—making it ideal for writing secure, type-safe smart contracts.
 
-What makes Scala 3 exceptional for blockchain development:
+## What Makes Scala 3 Exceptional for Blockchain?
 
 1. **Multi-platform versatility**: Runs on JVM, compiles to JavaScript, and supports native compilation via LLVM, giving developers flexibility across environments.
 
