site: reworking homepage

--- a/scalus-site/content/smart-contract/developing-smart-contracts.mdx
+++ b/scalus-site/content/smart-contract/developing-smart-contracts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Developing Your First Cardano Smart Contract
-sidebarTitle: Developing Smart Contracts
+sidebarTitle: First Smart Contract
 description: Write, test, and debug your first Cardano validator using Scalus. Learn spending validators, datums, redeemers, and how to debug contracts as regular Scala code.
 ---
 import { Steps, Tabs } from 'nextra/components'
