--- a/scalus-site/content/transaction-builder/index.mdx
+++ b/scalus-site/content/transaction-builder/index.mdx
@@ -81,6 +81,8 @@ TxBuilder.withCustomEvaluator(env, evaluator)
 - **[Payment Methods](/docs/transaction-builder/payment-methods)** - Learn different ways to send ADA and tokens
 - **[Spending UTxOs](/docs/transaction-builder/spending-utxos)** - Understand input selection and spending script UTxOs
 - **[Minting & Burning](/docs/transaction-builder/minting-burning-assets)** - Create and destroy native tokens
+- **[Staking Operations](/docs/transaction-builder/staking-operations)** - Register stake keys, delegate to pools, and withdraw rewards
+- **[Governance](/docs/transaction-builder/governance)** - Participate in Cardano governance through DRep delegation
 
 {/*
 - **[Validator Interactions](/docs/transaction-builder/validator-interactions)** - Work with Plutus validators
